# GCodeForge

./: CMakeLists.txt  CMakeUserPresets.json  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Log/: cdockmessages.cpp  cdockmessages.h  logmessage.cpp  logmessage.h  logmessagemodel.cpp  logmessagemodel.h
